2001-01-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (boundary): Moved calls to set the axis endpoints
 	up here.  Fixes bug in key placement caused by uninitialized
 	variables used by map_position().
	(do_plot): Removed them from here.
	(boundary): Disallow key entry height to become zero --- want to
 	divide by it later.

2002-01-22  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* INSTALL: Remove references to the GP_PATH_* macros.

	* configure.in: General cleanup and bugfixing. Replace all references
	to GP_PATH_* macros with code that uses generic autoconf macros.

	* src/graphics.c: Make finish_filled_curve() static.

	* src/version.c: Increment version to 3.8i, update date and copyright.

	* m4/path-hdr.m4, m4/path-lib.m4: Remove.

2002-01-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/gadgets.h src/gadgets.c src/graph3d.c
	src/graphics.c src/save.c src/set.c src/show.c src/tables.h
	src/tables.c src/unset.c: New option 'set key height <height>'.

2002-01-18  Clark Gaylord  <cgaylord@vt.edu>

	* Change all references in documentation from gnuplot.org to
	gnuplot.info.

2002-01-17  Johannes Zellner  <johannes@zellner.org>

	* term/x11.trm term/emf.trm: Removed unused variables.

2002-01-17  Johannes Zellner  <johannes@zellner.org>

	* term/x11.trm src/unset.c src/gplt_x11.c: Removed the
	X11_unset_pm3d() function which made multiplot not working on X11.
	Introduced a variable plot->release_cmap in gplt_x11.c for
	controlling freeing of pm3d colors.

2002-01-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/titlepag.tex: Have \usepackage{hyperref} only once.

2002-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* pm3d/demo/Demo.gp: Remove 'set term pop' after 'reset' (the latter
	does not change terminal).

2002-01-07  Petr Mikulik  <mikulik@physics.muni.cz>

	* plot.c: Fix load_rcfile() to properly	report the startup filename
	(needed if it contains a typo).
